--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,7 @@ caption{
 .event-cell:hover{
     border-style: solid !important;
     border-width: 5px !important;
-    border-color: white !important;
+    border-color: black !important;
 }
 
 table{
