--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,12 +110,16 @@ caption{
 }
 
 .nav-events{
-    background-color: transparent !important;
+    background-color: rgb(0, 123, 255, 0.2)!important;
     font-size: 20px !important;
+    position: sticky !important;
+    top: 0;
 }
 
 .nav-event, nav li{
     color: white !important;
+    font-weight: bold !important;
+    opacity: 1 !important;
     background-color: none;
 }
 
@@ -129,7 +133,7 @@ caption{
 .event-cell:hover{
     border-style: solid !important;
     border-width: 5px !important;
-    border-color: black !important;
+    border-color: white!important;
 }
 
 table{
