--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,9 +161,7 @@ th{
 }
 
 .event-cell:hover{
-    border-style: solid !important;
-    border-width: 5px !important;
-    border-color: white!important;
+    cursor: pointer;
 }
 
 table{
